1.19.4 taw 1.4.7 backport